@@ -1,6 +1,6 @@
 1.1beta9:
- - fix windows agent crash
 
+ - make grid 0,20,40,60,80,100 in graphs
  - support of PostgreSQL
  - "* info" graphs on screens do not work
  - http://www.zabbix.com/forum/showthread.php?t=2736
