@@ -1,5 +1,7 @@
 Changes for 1.1beta11:
 
+ - cleaned SQL statements to have mod() instead of % (Alexei)
+ - fixed displaying of graphs for periods more than 24h (Alexei)
  - modified oracle schema to initialise sequences with 20000 (Alexei)
  - fixed oracle sql request limitation (Eugene)
 
